# POO_Lab_144_2022_2023_Semigrupa_2

./: CMakeLists.txt  main.cpp
bunicuta/: BucatariaBunicutei.cpp  BucatariaBunicutei.h  BunicutaTest.cpp  BunicutaTest.h  Forma.cpp  Forma.h  FormaCerc.cpp  FormaCerc.h  FormaDreptunghi.cpp  FormaDreptunghi.h  FormaPatrat.cpp  FormaPatrat.h  FormaTriunghi.cpp  FormaTriunghi.h  MeniuBucatariaBunicutei.cpp  MeniuBucatariaBunicutei.h
complex/: Complex.cpp  Complex.h  ComplexTest.cpp  ComplexTest.h
