cmake_minimum_required(VERSION 3.24)
project(POO_Lab_144_2022_2023_Semigrupa_2)

set(CMAKE_CXX_STANDARD 98)

add_executable(POO_Lab_144_2022_2023_Semigrupa_2 main.cpp complex/Complex.cpp complex/Complex.h complex/ComplexTest.cpp complex/ComplexTest.h bunicuta/Forma.cpp bunicuta/Forma.h bunicuta/FormaPatrat.cpp bunicuta/FormaPatrat.h bunicuta/BunicutaTest.cpp bunicuta/BunicutaTest.h bunicuta/MeniuBucatariaBunicutei.cpp bunicuta/MeniuBucatariaBunicutei.h bunicuta/BucatariaBunicutei.cpp bunicuta/BucatariaBunicutei.h bunicuta/FormaDreptunghi.cpp bunicuta/FormaDreptunghi.h bunicuta/FormaTriunghi.cpp bunicuta/FormaTriunghi.h bunicuta/FormaCerc.cpp bunicuta/FormaCerc.h)
